--- a/OderFoodOnline/nbproject/project.properties
+++ b/OderFoodOnline/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/OrderFoodOnline.jar
+dist.jar=${dist.dir}/Supermarket.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/OrderFoodOnline
+dist.jlink.output=${dist.jlink.dir}/Supermarket
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=OrderFoodOnline
-main.class=orderfoodonline.OrderFoodOnline
+jlink.launcher.name=Supermarket
+main.class=Supermarket.OrderFoodOnline
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
