--- a/OderFoodOnline/nbproject/project.properties
+++ b/OderFoodOnline/nbproject/project.properties
@@ -34,11 +34,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Supermarket
 excludes=
 file.reference.rs2xml.jar=..\\..\\..\\..\\Downloads\\rs2xml.jar
+file.reference.rs2xml.jar-1=C:\\Users\\AD\\Downloads\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${libs.MyLibrary.classpath}:\
+    ${file.reference.rs2xml.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
