--- a/OderFoodOnline/nbproject/project.properties
+++ b/OderFoodOnline/nbproject/project.properties
@@ -33,15 +33,19 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Supermarket
 excludes=
+file.reference.mysql-connector-j-9.3.0.jar=C:\\Users\\LOQ\\Downloads\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0.jar
 file.reference.rs2xml.jar=..\\..\\..\\..\\Downloads\\rs2xml.jar
 file.reference.rs2xml.jar-1=C:\\Users\\AD\\Downloads\\rs2xml.jar
+file.reference.rs2xml.jar-2=D:\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
     ${file.reference.rs2xml.jar}:\
     ${libs.MyLibrary.classpath}:\
-    ${file.reference.rs2xml.jar-1}
+    ${file.reference.rs2xml.jar-1}:\
+    ${file.reference.mysql-connector-j-9.3.0.jar}:\
+    ${file.reference.rs2xml.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
